refactor: sonar issues on tests